objects/Vehicle__c.object
<CustomObject>
    <description>Vehicles are acquired from sellers and sold to buyers.</description>
    <fields>
        <fullName>Accident_Notes__c</fullName>
        <label>Accident Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Repair_Facility__c</fullName>
        <label>Auto Repair Facility</label>
        <picklist>
            <picklistValues>
                <fullName>A&amp;D Auto Detailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agundis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMobili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay Area Limo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.O.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Bruno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylormade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Shop San Bruno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trap&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triple M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zak&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Trader_Listing_URL__c</fullName>
        <label>Auto Trader Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Base_Deal_ID__c</fullName>
        <formula>Migration_Source_ID__r.Base_Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Of_Sale_Content_ID__c</fullName>
        <label>Bill Of Sale Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Bed_Style__c</fullName>
        <label>Body Bed Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Cab_Style__c</fullName>
        <label>Body Cab Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Style__c</fullName>
        <label>Body Style</label>
        <picklist>
            <picklistValues>
                <fullName>Convertible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wagon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Be_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Be Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Gurus_Listing_URL__c</fullName>
        <label>Car Gurus Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Carmax_Comparable__c</fullName>
        <label>Carmax Comparable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cars_Dot_Com_Listing_URL__c</fullName>
        <label>Cars Dot Com Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Coming_Soon__c</fullName>
        <formula>OR(
Needs_Repairs__c = True,
In_Transit__c = True,
(ISPICKVAL(Paperwork_Missing__c, &apos;Yes - Less Than 7 Days Unavailable&apos;)),
(ISPICKVAL(Paperwork_Missing__c, &apos;Yes - More Than 7 Days Unavailable&apos;)),
(Seller_Stage__c =&apos;Prepare Car for Sale&apos;),
(Photos_Ready__c = False)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coming Soon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Poor - Modified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor - Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Craigslist_Comparable__c</fullName>
        <label>Craigslist Comparable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_Email__c</fullName>
        <label>Craigslist Listing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_URL__c</fullName>
        <label>Craigslist Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Craigslist_Top_Features__c</fullName>
        <label>Craigslist Top Features</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_Unavailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Unavailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detail_URL__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ShiftVehicleDetail?id=&apos; &amp; Id, &apos;Vehicle Detail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Year__c</fullName>
        <formula>Text (Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_Count__c</fullName>
        <label>Door Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driveshift_Listing_URL__c</fullName>
        <label>Driveshift Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Driveshift_Shortlink_URL__c</fullName>
        <label>Driveshift Shortlink URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Driveshift_Test_Drive_Booking_URL__c</fullName>
        <formula>Driveshift_Listing_URL__c &amp; &quot;?targetid=schedule-form&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Driveshift Test Drive Booking URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivetrain__c</fullName>
        <label>Drivetrain</label>
        <picklist>
            <picklistValues>
                <fullName>all wheel drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>four wheel drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>front wheel drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rear wheel drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>two wheel drive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dropbox_Photos_URL__c</fullName>
        <label>Dropbox Photos URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ebay_Listing_URL__c</fullName>
        <label>Ebay Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Edmunds_TMV_Trade_In__c</fullName>
        <label>Edmunds TMV Trade In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Engine_Cylinder_Count__c</fullName>
        <label>Engine Cylinder Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Displacement__c</fullName>
        <label>Engine Displacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <label>Engine Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Listed_At__c</fullName>
        <label>First Listed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Going_To_Auction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Going To Auction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Spare_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates the vehicle has at least one extra key</inlineHelpText>
        <label>Has Spare Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_For_Financing_Last_Modified_At__c</fullName>
        <label>Hold For Financing Last Modified At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hold_For_Financing_Last_Modified_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hold For Financing Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_For_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold For Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_For_Trade_In_Last_Modified_At__c</fullName>
        <label>Hold For Trade-In Last Modified At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hold_For_Trade_In_Last_Modified_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hold For Trade-In Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_For_Trade_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold For Trade-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InPersonVerification__c</fullName>
        <label>In-Person Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Skipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Transit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Transit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Photos_URL__c</fullName>
        <label>Inspection Photos URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <label>Interior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Being_Prepared_For_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Being Prepared For Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Crosslisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Crosslisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Eligible_For_Shift_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Eligible For Shift Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lease__c</fullName>
        <formula>Seller_Opportunity_ID__r.Is_Lease__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Test__c</fullName>
        <formula>Seller_Opportunity_ID__r.Is_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Warranty_Transferrable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Warranty Transferrable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KBB_Lending_Value__c</fullName>
        <label>KBB Lending Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KBB_P2P_Value_Good__c</fullName>
        <label>KBB P2P Value Good</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KBB_P2P_Value_Very_Good__c</fullName>
        <label>KBB P2P Value Very Good</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KBB_Trade_In_Value_Good__c</fullName>
        <label>KBB Trade In Value Good</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Six_Digits_Of_VIN__c</fullName>
        <formula>RIGHT(VIN__c, 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Six Digits Of VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Six_Of_VIN__c</fullName>
        <label>Last Six Of VIN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Plate_Returned_To_DMV_On__c</fullName>
        <label>License Plate Returned To DMV On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Plate_State__c</fullName>
        <label>License Plate State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <label>License Plate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing_Phone_Number__c</fullName>
        <label>Listing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Listing_Region_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Listing Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listing_Region_Name__c</fullName>
        <formula>Listing_Region_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Listing Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Text__c</fullName>
        <label>Listing Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Listing_Title__c</fullName>
        <label>Listing Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Of_Title__c</fullName>
        <label>Location Of Title</label>
        <picklist>
            <picklistValues>
                <fullName>Lender - Payoff Docs Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - See Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shift - Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMR__c</fullName>
        <label>MMR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPG__c</fullName>
        <label>MPG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mechanic_Inspection_Summary__c</fullName>
        <description>Shift&apos;s summary (base: &quot;Mechanic Inspection Summary&quot;)</description>
        <label>Mechanic Inspection Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Missing_Pricing_Information__c</fullName>
        <label>Missing Pricing Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Repair_Cosmetic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Repair Cosmetic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Repair_Mechanical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Repair Mechanical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Repairs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Repairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Smog_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Smog Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Professional_Photos_URL__c</fullName>
        <label>Non Professional Photos URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_Of_Accidents__c</fullName>
        <label>Number Of Accidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Owners__c</fullName>
        <label>Number Of Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offerup_Listing_URL__c</fullName>
        <label>OfferUp Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>On_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Warranty_Miles__c</fullName>
        <label>Original Warranty Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Warranty_Start_Date__c</fullName>
        <label>Original Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Warranty_Years__c</fullName>
        <label>Original Warranty Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packages__c</fullName>
        <label>Packages</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paperwork_Fee_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Admin field to track the Late Paperwork fee we will charge once the contract is signed for over 30 days and paperwork is missing.  This field should be updated by the updatePaperworkFeePending trigger.</description>
        <inlineHelpText>This field should be updated by the updatePaperworkFeePending trigger.</inlineHelpText>
        <label>Paperwork Fee Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paperwork_Missing_Reason__c</fullName>
        <label>Paperwork Missing Reason</label>
        <picklist>
            <picklistValues>
                <fullName>DMV 262 - error on form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMV 262 - missing signature, seller not reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents - not uploaded, unable to review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Plates - missing one plate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Plates - seller keeping personalized plates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payoff - seller paid off, zero balance letter received from lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payoff - seller underwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payoff - waiting for seller to send payoff statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration - card missing, submitted DMV 156</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration -  expired, submitted DMV 156</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller - not cooperating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - DMV 227 filled out incorrectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TItle - missing signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - missing signature, seller not reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - no hard title, only DMV 227</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - on the way (DC only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - out of state title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - seller submitted DMV 227</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - waiting after seller payoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - waiting after Shift payoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title - waiting on seller to send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year/Month Sticker - seller submitted DMV 156</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year/Month Sticker - Shift submitted DMV 156</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paperwork_Missing__c</fullName>
        <label>Paperwork Missing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - More Than 7 Days Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Less Than 7 Days Unavailable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Available Without Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>